--- a/src/templates/nodeJsModule/src/index.ejs
+++ b/src/templates/nodeJsModule/src/index.ejs
@@ -1,3 +1,3 @@
-export default function <%= libName %>() {
+export default function <%= libName %>()<%= ts ? ': void' : '' %> {
   console.log('Hello world!');
 }
