Add license files to template

--- a/src/templates/nodeJsModule/package.json.ejs
+++ b/src/templates/nodeJsModule/package.json.ejs
@@ -8,7 +8,7 @@
         email: "<%= authorEmail %>",
         url: ""
     },
-    "license": "",
+    "license": "<%= lic %>",
     "homepage": "",
     "type": "module",
     "module": "lib/<%= libName %>.esm.js",
