--- a/src/templates/nodeJsModule/README.md.ejs
+++ b/src/templates/nodeJsModule/README.md.ejs
@@ -1,3 +1,8 @@
 # <%= pkgName %> 
 
 > Description
+
+## License
+<% if (lic) { %>
+Copyright (c) <%= year %>, <%= authorFullName %> (<%= lic %> License).
+<% } %>
