Add jest test runner to template

--- a/src/templates/nodeJsModule/.eslintrc.json.ejs
+++ b/src/templates/nodeJsModule/.eslintrc.json.ejs
@@ -8,6 +8,9 @@
     <% if (ts) { -%>
     "plugin:@typescript-eslint/recommended",
     <% } -%>
+    <% if (testRunner === 'jest') { -%>
+    "plugin:jest/recommended",
+    <% } -%>
     "plugin:prettier/recommended"
   ],
   <% if (ts) { -%>
