--- a/src/templates/nodeJsModule/README.md.ejs
+++ b/src/templates/nodeJsModule/README.md.ejs
@@ -1,8 +1,9 @@
-# <%= pkgName %> 
+# <%= pkgNameWithScope %> 
 
 > Description
 
-## License
 <% if (lic) { %>
+## License
+
 Copyright (c) <%= year %>, <%= authorFullName %> (<%= lic %> License).
 <% } %>
