Add unlicensed in pkg config for not selected lic

--- a/src/templates/nodeJsModule/package.json.ejs
+++ b/src/templates/nodeJsModule/package.json.ejs
@@ -8,7 +8,7 @@
         email: "<%= authorEmail %>",
         url: ""
     },
-    "license": "<%= lic %>",
+    "license": "<%= lic ? lic : 'UNLICENSED' %>",
     "homepage": "",
     <% if (gitProvider) { %>
         "repository": {
