Fix git url format in template package.json

--- a/src/templates/nodeJsModule/package.json.ejs
+++ b/src/templates/nodeJsModule/package.json.ejs
@@ -13,7 +13,7 @@
     <% if (gitProvider) { %>
         "repository": {
             "type": "git",
-            "url": "<%= gitUrl %>"
+            "url": "git+<%= gitUrl %>"
           },
     <% } %>
     "type": "module",
