--- a/src/templates/nodeJsModule/package.json.ejs
+++ b/src/templates/nodeJsModule/package.json.ejs
@@ -17,7 +17,7 @@
           },
     <% } %>
     "type": "module",
-    "module": "lib/<%= pkgName %>.js",
+    "exports": { ".": "./<%= buildDir %>/<%= pkgName %>.js" },
     "engines": {
         "node": "^12.22.0 || ^14.17.0 || >=16.0.0"
       },
