Add main field into pkg template

--- a/src/templates/nodeJsModule/package.json.ejs
+++ b/src/templates/nodeJsModule/package.json.ejs
@@ -17,6 +17,7 @@
           },
     <% } %>
     "type": "module",
+    "main": "./<%= buildDir %>/index.js",
     "module": "./<%= buildDir %>/index.js",
     "types": "./<%= buildDir %>/index.d.ts",
     "exports": { ".": "./<%= buildDir %>/index.js" },
