Add react template

--- a/src/templates/nodeJsModule/jest.ejs
+++ b/src/templates/nodeJsModule/jest.ejs
@@ -1,4 +1,4 @@
-import <%= pkgName -%> from '../<%= buildDir -%>/<%= pkgName -%>.js';
+import <%= pkgName -%> from '../<%= buildDir -%>/index.js';
 
 describe('<%= pkgName %>', () => {
     test('index', () => {
