--- a/src/templates/react/src/index.js.ejs
+++ b/src/templates/react/src/index.js.ejs
@@ -1,5 +1,5 @@
-import MyComponent from './MyComponent.js'
+import <%= componentName %> from './<%= componentName %><%= ts ? '.tsx' : '.js' %>'
 
 export {
-  MyComponent
+  <%= componentName %>
 }
