--- a/src/templates/react/.eslintrc.json.ejs
+++ b/src/templates/react/.eslintrc.json.ejs
@@ -27,9 +27,13 @@
   <% if (ts) { -%>
   "plugins": ["@typescript-eslint", "prettier"],
   <% } else { -%>
-  "plugins": ["react", "prettier"],
+  "plugins": ["react", "react-hooks", "prettier"],
   <% } -%>
   "rules": {
-    "prettier/prettier": "error"
+    "prettier/prettier": "error",
+    "react-hooks/rules-of-hooks": "error",
+    "react-hooks/exhaustive-deps": "warn",
+    "react/jsx-uses-react": "off",
+    "react/react-in-jsx-scope": "off"
   }
 }
