Change export exp in tempates

--- a/src/templates/nodeJsModule/src/index.js.ejs
+++ b/src/templates/nodeJsModule/src/index.js.ejs
@@ -30,6 +30,8 @@
 // along with this program.  If not, see <https://www.gnu.org/licenses/>.
 <% } %>
 
-export default function <%= pkgName %>()<%= ts ? ': string' : '' %> {
+function <%= pkgName %>()<%= ts ? ': string' : '' %> {
   return 'Hello World!';
 }
+
+export default <%= pkgName %>;
