Add readme file to default templates

--- a/src/templates/default/README.md.ejs
+++ b/src/templates/default/README.md.ejs
@@ -2,6 +2,18 @@
 
 > Description
 
+## Installation
+
+Using npm
+
+```bash
+npm install <%= pkgNameWithScope %>
+```
+Using Yarn
+
+```bash
+yarn add <%= pkgNameWithScope %>
+```
 <% if (lic) { %>
 ## License
 
