Use shell instead of bash in readme template

--- a/src/templates/default/README.md.ejs
+++ b/src/templates/default/README.md.ejs
@@ -6,12 +6,12 @@
 
 Using npm
 
-```bash
+```shell
 npm install <%= pkgNameWithScope %>
 ```
 Using Yarn
 
-```bash
+```shell
 yarn add <%= pkgNameWithScope %>
 ```
 <% if (lic) { %>
