Add rollup config based on react lib type

--- a/src/templates/shared/bundler/rollup.config.js.ejs
+++ b/src/templates/shared/bundler/rollup.config.js.ejs
@@ -13,12 +13,14 @@ export default {
   plugins: [
     <% if (ts) { %>
       typescript({ tsconfig: './tsconfig.json' })
-    <% } else { %>
+    <% } -%>
+    <% if (!ts && libType === 'react') { %>  
       babel({ babelHelpers: 'bundled' })
     <% } -%>
   ],
   <% if (libType === 'react') { %>
     external: ['react/jsx-runtime'],
-  <% } -%>
-  external: [],
+  <% } else { %>
+    external: [],
+   <% } -%> 
 };
