Add ts config for react template

--- a/src/templates/react/src/index.js.ejs
+++ b/src/templates/react/src/index.js.ejs
@@ -1,4 +1,4 @@
-import <%= componentName %> from './<%= componentName %><%= ts ? '.tsx' : '.js' %>'
+import <%= componentName %> from './<%= componentName %><%= ts ? '' : '.js' %>'
 
 export {
   <%= componentName %>
