--- a/src/templates/react/.eslintrc.json.ejs
+++ b/src/templates/react/.eslintrc.json.ejs
@@ -1,7 +1,7 @@
 {
   "env": {
     "es2021": true,
-    "node": true
+    "browser": true,
   },
   "extends": [
     "eslint:recommended",
@@ -25,7 +25,7 @@
     }
   },
   <% if (ts) { -%>
-  "plugins": ["@typescript-eslint", "prettier"],
+  "plugins": ["react", "react-hooks", "@typescript-eslint", "prettier"],
   <% } else { -%>
   "plugins": ["react", "react-hooks", "prettier"],
   <% } -%>
