Add license link in readme template

--- a/src/templates/default/README.md.ejs
+++ b/src/templates/default/README.md.ejs
@@ -17,5 +17,5 @@ yarn add <%= pkgNameWithScope %>
 <% if (lic) { %>
 ## License
 
-Copyright (c) <%= year %>, <%= authorFullName %> (<%= lic %> License).
+Copyright (c) <%= year %>, <%= authorFullName %> ([<%= lic %> License](./LICENSE)).
 <% } %>
