--- a/src/templates/shared/bundler/rollup.config.js.ejs
+++ b/src/templates/shared/bundler/rollup.config.js.ejs
@@ -1,6 +1,6 @@
 <% if (ts) { -%>
 import typescript from '@rollup/plugin-typescript'; 
-<% } else { -%>
+<% } else if(libType === 'react') { -%>
 import { babel } from '@rollup/plugin-babel';
 <% } -%> 
 
